--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,7 @@
     <%= stylesheet_link_tag 'application' %>
     <%= stylesheet_link_tag 'scaffold' %>
     <%= stylesheet_link_tag 'fullcalendar' %>
+    <%= stylesheet_link_tag 'omniauth' %>
     <% if File.exist? File.join(Rails.public_path, "stylesheets/#{controller.controller_name}.css") %>
       <%= stylesheet_link_tag controller.controller_name %>
     <% end %>
