--- a/app/views/shared/_sign_up_dialog.html.erb
+++ b/app/views/shared/_sign_up_dialog.html.erb
@@ -1,5 +1,5 @@
 <div id='sign_up_dialog' style='display:none' title='<%= t('shared.sign_up_dialog.title') %>'>
-  <%= form_for(User.new, :url => registration_path(:user)) do |f| %>
+  <%= form_for(@user = User.new, :url => registration_path(:user)) do |f| %>
     <%= render :partial => 'shared/sign_up_fields', :locals => {:f => f} %>
   <% end %>
   <%= render :partial => "shared/registration_links", :locals => {:action => :sign_up} %>
