--- a/public/stylesheets/omniauth.css
+++ b/public/stylesheets/omniauth.css
@@ -1,5 +1,9 @@
+.oauth_providers {
+}
+
 .authentications {
   margin-bottom: 30px;
+  overflow: auto;
 }
 
 .authentication {
@@ -52,7 +56,8 @@
 .auth_provider {
   float: left;
   text-decoration: none;
-  margin-right: 20px;
+  margin-right: 10px;
+  margin-left: 10px;
   text-align: center;
   margin-bottom: 10px;
 }
