--- a/public/stylesheets/omniauth.css
+++ b/public/stylesheets/omniauth.css
@@ -15,7 +15,7 @@
   -moz-border-radius: 8px;
   -webkit-border-radius: 8px;
   position: relative;
-  margin-right: 10px;
+  margin-left: 10px;
 }
 
 .authentication .remove {
