--- a/app/views/shared/_authentications_tab.html.erb
+++ b/app/views/shared/_authentications_tab.html.erb
@@ -1,29 +1,21 @@
 <% if current_user.authentications %>
  <% unless current_user.authentications.empty? %>
-  <p><strong>You can sign in to this account using:</strong></p>
+  <p><strong><%= t('shared.authentications_tab.authentications') %></strong></p>
    <div class="authentications">
     <% current_user.authentications.each do |authentication| %>
      <div class="authentication">
       <%= image_tag "#{authentication.provider}_32.png", :size => "32x32" %>
       <div class="provider"><%= authentication.provider.titleize %></div>
       <div class="uid"><%= authentication.uid %></div>
-       <%= link_to "X", authentication, :confirm => 'Are you sure you want to remove this authentication option?', :method => :delete, :class => "remove" %>
+       <%= link_to "X", authentication, :confirm => t('shared.authentications.confirm_remove'), :method => :delete, :class => "remove" %>
      </div>
      <% end %>
      <div class="clear"></div>
     </div>
    <% end %>
-   <p><strong>Add another service to sign in with:</strong></p>
+   <p><strong><%= t('shared.authentications_tab.add_another') %></strong></p>
   <% else %>
-  <p><strong>Sign in through one of these services:</strong></p>
+  <p><strong><%= t('shared.authentications_tab.sign_in_from') %></strong></p>
 <% end %>
 
-<a href="/auth/twitter" class="auth_provider">
-  <%= image_tag "twitter_64.png", :size => "64x64", :alt => "Twitter" %>Twitter</a>
-<a href="/auth/facebook" class="auth_provider">
-  <%= image_tag "facebook_64.png", :size => "64x64", :alt => "Facebook" %>Facebook</a>
-<a href="/auth/google_apps" class="auth_provider">
-  <%= image_tag "google_64.png", :size => "64x64", :alt => "Google" %>Google</a>
-<a href="/auth/open_id" class="auth_provider">
-  <%= image_tag "openid_64.png", :size => "64x64", :alt => "OpenID" %>OpenID</a>
-<div class="clear"></div>
+<%= render :partial => 'shared/oauth_providers' %>
