--- a/app/views/shared/_oauth_providers.html.erb
+++ b/app/views/shared/_oauth_providers.html.erb
@@ -3,8 +3,8 @@
     <%= image_tag "twitter_64.png", :size => "64x64", :alt => "Twitter" %>Twitter</a>
   <a href="/auth/facebook" class="auth_provider">
     <%= image_tag "facebook_64.png", :size => "64x64", :alt => "Facebook" %>Facebook</a>
-  <a href="/auth/google_apps" class="auth_provider">
+  <a href="#" class="auth_provider" onclick="alert('<%= t('shared.oauth_providers.google_apps_not_available') %>')" >
     <%= image_tag "google_64.png", :size => "64x64", :alt => "Google" %>Google</a>
-  <a href="/auth/open_id" class="auth_provider">
-    <%= image_tag "openid_64.png", :size => "64x64", :alt => "OpenID" %>OpenID</a>
+  <a href="#" class="auth_provider" onclick="alert('<%= t('shared.oauth_providers.padma_not_available') %>')">
+    <%= image_tag "padma_64.png", :size => "64x64", :alt => "Padma" %>Padma</a>
 </div>
