--- a/app/views/shared/_external_contact_links.html.erb
+++ b/app/views/shared/_external_contact_links.html.erb
@@ -3,4 +3,5 @@
   <a href="/external_contacts?provider=yahoo" onclick="popUp(this.href,'console',515,505); return false;" target="_blank">Yahoo
     Mail</a>
   <a href="/external_contacts?provider=windows_live" onclick="popUp(this.href,'console',550,915); return false;" target="_blank">MSN</a>
+  <a href="/facebook_contacts" onclick="popUp(this.href,'console',670,780); return false;" target="_blank">Facebook</a>
 </p>
