--- a/app/views/facebook_contacts/index.html.erb
+++ b/app/views/facebook_contacts/index.html.erb
@@ -12,7 +12,7 @@
                       <fb:intl>Join me!</fb:intl>
                     </fb:fbml-attribute>
                   </fb:req-choice>">
-        <fb:multi-friend-selector import_external_friends=false email_invite=false actiontext="Invite your friends to use Sádhana.">
+        <fb:multi-friend-selector import_external_friends=false email_invite=false actiontext="<%= t('facebook_contacts.request_form.title') %>">
       </fb:request-form>
     </fb:fbml>
   </script>
