go to facebook signup on accept

--- a/app/views/facebook_contacts/index.html.erb
+++ b/app/views/facebook_contacts/index.html.erb
@@ -7,7 +7,7 @@
         type="Sádhana"
         invite=true
         content="<%= t('facebook_contacts.request_form.content') %>
-                  <fb:req-choice url='http://sadhana.com.ar'>
+                  <fb:req-choice url='http://sadhana.com.ar/auth/facebook'>
                     <fb:fbml-attribute name='label'>
                       <fb:intl>Join me!</fb:intl>
                     </fb:fbml-attribute>
