accept invitation from facebook (signup)

--- a/app/views/shared/_sign_up_fields.html.erb
+++ b/app/views/shared/_sign_up_fields.html.erb
@@ -1,3 +1,10 @@
+<% if @user.facebook %>
+  <%= f.hidden_field :invited_by %>
+  <p><%= "Enter your email or choose one below to complete the registration:" %></p>
+  <ul>
+    <li><%= link_to @user.facebook.email, "#", :onclick => "$('#user_email').val(this.innerHTML)" %></li>
+  </ul>
+<% end %>
 <div class='field'>
   <%= f.label :email %><br/>
   <%= f.text_field :email, :type => 'email' %>
