a logged in user can accept an invitation

--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -10,6 +10,7 @@
 
   <p><%= f.submit t('devise.registrations.new.submit'), :class => 'awesome medium blue' %></p>
 <% end %>
+<h2>If you are already a Sádhana user</h2>
 
 <%= render :partial => "devise/shared/links" %>
 </div>
