--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -1,7 +1,7 @@
 <div class="page-content">
 <h2><%= t('devise.registrations.new.title') %></h2>
 <% if @user.facebook %>
-  <p><%= "Welcome #{@user.facebook.first_name} #{@user.facebook.last_name}!" %></p>
+  <p><%= t('registrations.new.welcome', :name => "#{@user.facebook.first_name} #{@user.facebook.last_name}") %></p>
 <% end %>
 <%= form_for(resource_name, resource, :url => registration_path(resource_name)) do |f| %>
 
