sort users table on admin

--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -2,12 +2,12 @@
 
 <table>
   <tr>
-    <th>Email</th>
-    <th>Plan</th>
-    <th>State</th>
-    <th>Balance</th>
-    <th>Next Renewal</th>
-    <th>Last Signin</th>
+    <th><%= sortable "email" %></th>
+    <th><%= sortable "plan_id" %></th>
+    <th><%= sortable "state" %></th>
+    <th><%= sortable "balance_cents" %></th>
+    <th><%= sortable "next_renewal_on" %></th>
+    <th><%= sortable "last_sign_in_at" %></th>
     <th></th>
     <th></th>
     <th></th>
