--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -3,6 +3,7 @@
 <head>
   <title>Admin <%= controller.controller_name %>: <%= controller.action_name %></title>
   <%= stylesheet_link_tag 'scaffold' %>
+  <%= stylesheet_link_tag 'admin' %>
   <%= javascript_include_tag 'jquery-1.4.2.min' %>
   <%= csrf_meta_tag %>
 </head>
