remove localhost url

--- a/app/views/facebook_contacts/index.html.erb
+++ b/app/views/facebook_contacts/index.html.erb
@@ -8,7 +8,7 @@
         type="Sádhana"
         invite=true
         content="<%= t('facebook_contacts.request_form.content') %>
-                  <fb:req-choice url='http://localhost:3000/auth/facebook?invited-by=<%= current_user.id %>'>
+                  <fb:req-choice url='http://sadhana.com.ar/auth/facebook?invited-by=<%= current_user.id %>'>
                     <fb:fbml-attribute name='label'>
                       <fb:intl>Join me!</fb:intl>
                     </fb:fbml-attribute>
