--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,6 +1,21 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <script type="text/javascript">
+      var _kmq = _kmq || [];
+      <%- if ENV['KISSMETRICS_API_KEY'] -%>
+      function _kms(u){
+        setTimeout(function(){
+          var s = document.createElement('script'); var f = document.getElementsByTagName('script')[0]; s.type = 'text/javascript'; s.async = true;
+          s.src = u; f.parentNode.insertBefore(s, f);
+        }, 1);
+      }
+      _kms('//i.kissmetrics.com/i.js');_kms('//doug1izaerwt3.cloudfront.net/<%= ENV['KISSMETRICS_API_KEY'] %>.1.js');
+      <%- end -%>
+
+      _kmq.push(['identify', <%= current_user ? current_user.email : "null" %> ]);
+    </script>
+
     <title>S&aacute;dhana</title>
 
     <%= stylesheet_link_tag 'ui-lightness/jquery-ui-1.8rc3.custom' %>
