--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,20 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <script type="text/javascript">
-      var _kmq = _kmq || [];
-      <%- if ENV['KISSMETRICS_API_KEY'] -%>
-      function _kms(u){
-        setTimeout(function(){
-          var s = document.createElement('script'); var f = document.getElementsByTagName('script')[0]; s.type = 'text/javascript'; s.async = true;
-          s.src = u; f.parentNode.insertBefore(s, f);
-        }, 1);
-      }
-      _kms('//i.kissmetrics.com/i.js');_kms('//doug1izaerwt3.cloudfront.net/<%= ENV['KISSMETRICS_API_KEY'] %>.1.js');
-      <%- end -%>
-
-      _kmq.push(['identify', <%= current_user ? current_user.email : "null" %> ]);
-    </script>
+    <%= raw analytical.head_prepend_javascript %>
 
     <title>S&aacute;dhana</title>
 
@@ -55,24 +42,14 @@
     <% if File.exist? File.join(Rails.public_path, "javascripts/#{controller.controller_name}.js") %>
       <%= javascript_include_tag controller.controller_name %>
     <% end %>
-    <% if Rails.env == 'production' %>
-    <script type="text/javascript">
 
-      var _gaq = _gaq || [];
-      _gaq.push(['_setAccount', 'UA-20379392-1']);
-      _gaq.push(['_trackPageview']);
-
-      (function() {
-        var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-        ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-      })();
-
-    </script>
-    <% end %>
     <%= csrf_meta_tag %>
+
+    <% analytical.identify(current_user.id, :email=>current_user.email) if current_user %>
+    <%= raw analytical.head_append_javascript %>
   </head>
   <body>
+    <%= raw analytical.body_prepend_javascript %>
     <div id='header' class='ui-widget-header ui-corner-all'>
       <a href="/"><h1 id='logo'>S&aacute;dhana</h1></a>
       <div id="welcome">
@@ -138,5 +115,6 @@
       <%= render :partial => 'shared/plans_dialog' %>
     <% end %>
     <div id="jpId"></div>
+    <%= raw analytical.body_append_javascript %>
   </body>
 </html>
