prepare shared_practice to store settings per viewer

--- a/app/views/practices/_play_preferences_dialog_form.html.erb
+++ b/app/views/practices/_play_preferences_dialog_form.html.erb
@@ -10,7 +10,7 @@
   <div class="field">
     <%= f.label :sound_filename %><%= field_help t('practice.help.sound_filename') %>
     <br />
-    <%= f.select :sound_filename, {'Goblet', 'goblet', 'Chime', 'chime'}, {:selected => @practice.sound_filename}, {} %>
+    <%= f.select :sound_filename, {'Goblet' => 'goblet', 'Chime' => 'chime'}, {:selected => @practice.sound_filename}, {} %>
   </div>
 <% end %>
 
