--- a/app/views/practice_events/new.js.erb
+++ b/app/views/practice_events/new.js.erb
@@ -1,15 +1,14 @@
-if current_user.calendar_subscription_check(current_user.subscription.plan)
-    page << "$('#notifications').replaceWith('#{escape_javascript render :partial => 'shared/notifications'}');"
-else
-    page << "$('#new_event_dialog').html('#{escape_javascript render :partial => 'dialog_form'}');"
-    page << %(
-      $('#new_event_dialog').dialog({
+<% if current_user.calendar_subscription_check(current_user.subscription.plan) %>
+    "$('#notifications').replaceWith('<%= escape_javascript render :partial => 'shared/notifications' %>');"
+<% else %>
+    $('#new_event_dialog').html('<%= escape_javascript render :partial => 'dialog_form' %>');
+    $('#new_event_dialog').dialog({
         autoOpen: true,
         height: 300,
         width: 350,
         modal: true,
         buttons: {
-          '#{t('actions.save')}': function() {
+          '<%=t('actions.save')%>': function() {
             $('#practice_event_start_string').attr("disabled", false);
             $.ajax({
                 type:'post',
@@ -18,10 +17,9 @@ else
                 url: $('#new_event_dialog form').attr('action')
             });
           },
-          '#{t('actions.cancel')}': function() {
+          '<%=t('actions.cancel')%>': function() {
             $('#new_event_dialog').dialog('close');
           }
         }
       });
-    )
-end
+<% end %>
