fix js per controller

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,7 @@
     <%= stylesheet_link_tag 'ui.selectmenu' %>
     <%= stylesheet_link_tag 'awesome' %>
     <%= stylesheet_link_tag 'application' %>
-    <% if File.exist? File.join(Rails.root, "/assets/stylesheets/#{controller.controller_name}.css") %>
+    <% if File.exist? File.join(Rails.root, "/app/assets/stylesheets/#{controller.controller_name}.css") %>
       <%= stylesheet_link_tag controller.controller_name %>
     <% end %>
 
@@ -34,7 +34,7 @@
     <%= javascript_include_tag 'jquery.jstore-all-min' %>
     <%= javascript_include_tag 'css_browser_selector' %>
 
-    <% if File.exist? File.join(Rails.root, "/assets/javascripts/#{controller.controller_name}.js") %>
+    <% if File.exist? File.join(Rails.root, "/app/assets/javascripts/#{controller.controller_name}.js") %>
       <%= javascript_include_tag controller.controller_name %>
     <% end %>
 
