fix practice tips

--- a/app/views/practices/_practice_tips.html.erb
+++ b/app/views/practices/_practice_tips.html.erb
@@ -35,7 +35,7 @@
     <% end %>
   </p>
 </div>
-<% javascript_tag do %>
+<%= javascript_tag do %>
     $('#tips .tip').hide();
     $('#tips .tip').first().show();
 <% end %>
