--- a/app/views/practice_parts/create.js.erb
+++ b/app/views/practice_parts/create.js.erb
@@ -1,9 +1,9 @@
-$('#practice_time').html('#{practice_time(@practice)}');
-$('#practice_parts').tabs('add', '#part-techniques-#{@practice_part.id}', '#{@practice_part.part.name}');"
-$('#new_practice_part').attr('id', 'practice_part_#{@practice_part.id}').attr('part_id', '#{@practice_part.id}').attr('primary_technique_type', '#{@practice_part.part.primary_technique_type}').attr('secondary_technique_types', '#{@practice_part.part.secondary_technique_types}').attr('part_symbol', '#{@practice_part.part.symbol}');"
-$('#part-techniques-#{@practice_part.id}').height(Practices.calculateEditorHeight());
+$('#practice_time').html('<%=practice_time(@practice)%>');
+$('#practice_parts').tabs('add', '#part-techniques-<%=@practice_part.id%>', '<%=@practice_part.part.name%>');
+$('#new_practice_part').attr('id', 'practice_part_<%=@practice_part.id%>').attr('part_id', '<%=@practice_part.id%>').attr('primary_technique_type', '<%=@practice_part.part.primary_technique_type%>').attr('secondary_technique_types', '<%=@practice_part.part.secondary_technique_types%>').attr('part_symbol', '<%=@practice_part.part.symbol%>');
+$('#part-techniques-<%=@practice_part.id%>').height(Practices.calculateEditorHeight());
     // Enable sorting practice techniques
-    $('#part-techniques-#{@practice_part.id}').sortable(
+    $('#part-techniques-<%=@practice_part.id%>').sortable(
     {
       revert: 'invalid',
       opacity: 0.4,
