--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -41,7 +41,7 @@
 
       <div id="locale">
         <% unless user_signed_in? %>
-          <%= select :user, :locale, I18n.backend.available_locales.collect {|l| [I18n.t('this_file_language', :locale => l), l.to_s, {:class => l.to_s}]}, {:selected => I18n.locale.to_s} %>
+          <%= select :user, :locale, I18n.available_locales.collect {|l| [I18n.t('this_file_language', :locale => l), l.to_s, {:class => l.to_s}]}, {:selected => I18n.locale.to_s} %>
           <%= javascript_tag do %>
             $('#user_locale').selectmenu({style:'dropdown', width: 120, icons: [
                 {find: '.pt'},
