--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -3,7 +3,7 @@
 <% if @user.facebook %>
   <p><%= t('registrations.new.welcome', :name => "#{@user.facebook.first_name} #{@user.facebook.last_name}") %></p>
 <% end %>
-<%= form_for(resource_name, resource, :url => registration_path(resource_name)) do |f| %>
+<%= form_for(resource, :url => registration_path(resource_name)) do |f| %>
 
   <%= render :partial => 'shared/sign_up_fields', :locals => {:f => f} %>
 
