fix admin style

--- a/public/stylesheets/admin/active_admin.css
+++ b/public/stylesheets/admin/active_admin.css
@@ -1394,7 +1394,7 @@ table.dashboard {
     background: #d45f53; }
 
 .scopes {
-  float: left;
+  /*float: left;*/
   margin-bottom: 10px;
   font-size: 1.0em; }
   .scopes .scope {
