--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,6 +26,7 @@
         $.datepicker.regional['<%= current_user.locale %>']
       <% end %>
     <% end %>
+    <%= javascript_include_tag 'jquery.ui.touch-punch.min' %>
     <%= javascript_include_tag 'ui.selectmenu' %>
     <%= javascript_include_tag 'application' %>
     <%= javascript_include_tag 'jquery.jeditable' %>
