--- a/public/stylesheets/practices.css
+++ b/public/stylesheets/practices.css
@@ -26,6 +26,7 @@
 }
 
 #practice_editor {
+  margin-top: 4px;
   padding-left: 190px;
   padding-right: 8px;
 }
@@ -443,18 +444,6 @@ span#jeditable_description input {
 
 .next_technique img {
   vertical-align: middle;
-}
-
-div[aria-labelledby = 'ui-dialog-title-edit_practice_dialog'] .ui-dialog-titlebar {
-  display: none;
-}
-
-div[aria-labelledby = 'ui-dialog-title-edit_practice_dialog'] .ui-dialog-content, div[aria-labelledby = 'ui-dialog-title-edit_practice_dialog'] .ui-tabs {
-  padding:0;
-}
-
-#edit_practice_dialog .ui-tabs-nav .ui-state-active {
-  background: #EEE url(/stylesheets/ui-lightness/images/ui-bg_highlight-soft_100_eeeeee_1x100.png) repeat-x 20% 10%;
 }
 
 #practice-ui-tab-dialog-close {
