one sec a day on new edit practice dialog

--- a/app/views/practices/_play_preferences_dialog_form.html.erb
+++ b/app/views/practices/_play_preferences_dialog_form.html.erb
@@ -1,23 +1,3 @@
 <%= form_for(@practice) do |f| %>
-  <div class="field">
-    <%= f.check_box :continuous %> <%= f.label :continuous %><%= field_help t('practice.help.continuous') %>
-  </div>
-  <div class="field" id="delay_field">
-    <%= f.label :delay %><%= field_help t('practice.help.delay') %>
-    <br />
-    <%= f.text_field :delay %>
-  </div>
-  <div class="field">
-    <%= f.label :sound_filename %><%= field_help t('practice.help.sound_filename') %>
-    <br />
-    <%= f.select :sound_filename, {'Goblet' => 'goblet', 'Chime' => 'chime'}, {:selected => @practice.sound_filename}, {} %>
-  </div>
-<% end %>
-
-<%= javascript_tag do %>
-  Practices.toggleDelayFields($('#practice_continuous').val());
-  $('#practice_continuous').change(function(event) {
-    event.stopImmediatePropagation();
-    Practices.toggleDelayFields($('#practice_continuous').val());
-  });
+  <%= render :partial => 'practices/play_practice_fields', :locals => {:f => f} %>
 <% end %>
