--- a/app/views/practices/_practice_info_dialog_form.html.erb
+++ b/app/views/practices/_practice_info_dialog_form.html.erb
@@ -10,4 +10,12 @@
     <br />
     <%= f.text_area :description %>
   </div>
+
+  <div class="field description">
+    <%= Practice.human_attribute_name :one_sec_a_day %><%= field_help t('practice.help.one_sec_a_day') %>
+    <br />
+    <%= f.check_box :one_sec_a_day %>
+  </div>
+
+  <%= render :partial => 'practices/play_practice_fields', :locals => {:f => f} %>
 <% end %>
