--- a/app/views/practices/_fields.html.erb
+++ b/app/views/practices/_fields.html.erb
@@ -1,10 +1,17 @@
-<div class="field">
-  <%= f.label :name %><%= field_help t('practice.help.name') %>
-  <br />
-  <%= f.text_field :name %>
-</div>
-<div class="field">
-  <%= f.label :description %><%= field_help t('practice.help.description') %>
-  <br />
-  <%= f.text_area :description, :rows => 10 %>
-</div>
+  <div class="field name">
+    <%= Practice.human_attribute_name :name %><%= field_help t('practice.help.name') %>
+    <br />
+    <%= f.text_field :name %>
+  </div>
+
+  <div class="field description">
+    <%= Practice.human_attribute_name :description %><%= field_help t('practice.help.description') %>
+    <br />
+    <%= f.text_area :description %>
+  </div>
+
+  <div class="field description">
+    <%= Practice.human_attribute_name :one_sec_a_day %><%= field_help t('practice.help.one_sec_a_day') %>
+    <br />
+    <%= f.check_box :one_sec_a_day, :disabled => f.object.user.one_sec_a_day_subscription_check %>
+  </div>
